tests/baselines/reference/jsxEsprimaFbTestSuite.errors.txt
tests/cases/conformance/jsx/jsxEsprimaFbTestSuite.tsx(9,1): error TS2602: The global type 'JSX.Element' must exist when using JSX.
tests/cases/conformance/jsx/jsxEsprimaFbTestSuite.tsx(15,1): error TS2602: The global type 'JSX.Element' must exist when using JSX.
tests/cases/conformance/jsx/jsxEsprimaFbTestSuite.tsx(17,1): error TS2602: The global type 'JSX.Element' must exist when using JSX.
tests/cases/conformance/jsx/jsxEsprimaFbTestSuite.tsx(18,1): error TS2602: The global type 'JSX.Element' must exist when using JSX.
tests/cases/conformance/jsx/jsxEsprimaFbTestSuite.tsx(21,1): error TS2602: The global type 'JSX.Element' must exist when using JSX.
tests/cases/conformance/jsx/jsxEsprimaFbTestSuite.tsx(23,1): error TS2602: The global type 'JSX.Element' must exist when using JSX.
tests/cases/conformance/jsx/jsxEsprimaFbTestSuite.tsx(29,1): error TS2602: The global type 'JSX.Element' must exist when using JSX.
tests/cases/conformance/jsx/jsxEsprimaFbTestSuite.tsx(29,11): error TS2602: The global type 'JSX.Element' must exist when using JSX.
tests/cases/conformance/jsx/jsxEsprimaFbTestSuite.tsx(29,19): error TS2602: The global type 'JSX.Element' must exist when using JSX.
tests/cases/conformance/jsx/jsxEsprimaFbTestSuite.tsx(31,1): error TS2602: The global type 'JSX.Element' must exist when using JSX.
tests/cases/conformance/jsx/jsxEsprimaFbTestSuite.tsx(33,1): error TS2602: The global type 'JSX.Element' must exist when using JSX.
tests/cases/conformance/jsx/jsxEsprimaFbTestSuite.tsx(35,1): error TS2602: The global type 'JSX.Element' must exist when using JSX.
tests/cases/conformance/jsx/jsxEsprimaFbTestSuite.tsx(37,1): error TS2602: The global type 'JSX.Element' must exist when using JSX.
tests/cases/conformance/jsx/jsxEsprimaFbTestSuite.tsx(37,6): error TS2602: The global type 'JSX.Element' must exist when using JSX.
tests/cases/conformance/jsx/jsxEsprimaFbTestSuite.tsx(39,1): error TS2602: The global type 'JSX.Element' must exist when using JSX.
tests/cases/conformance/jsx/jsxEsprimaFbTestSuite.tsx(39,17): error TS2602: The global type 'JSX.Element' must exist when using JSX.
tests/cases/conformance/jsx/jsxEsprimaFbTestSuite.tsx(39,29): error TS2602: The global type 'JSX.Element' must exist when using JSX.
tests/cases/conformance/jsx/jsxEsprimaFbTestSuite.tsx(41,1): error TS2602: The global type 'JSX.Element' must exist when using JSX.
tests/cases/conformance/jsx/jsxEsprimaFbTestSuite.tsx(43,1): error TS2602: The global type 'JSX.Element' must exist when using JSX.
tests/cases/conformance/jsx/jsxEsprimaFbTestSuite.tsx(45,2): error TS2602: The global type 'JSX.Element' must exist when using JSX.
tests/cases/conformance/jsx/jsxEsprimaFbTestSuite.tsx(47,1): error TS2602: The global type 'JSX.Element' must exist when using JSX.
tests/cases/conformance/jsx/jsxEsprimaFbTestSuite.tsx(49,1): error TS2602: The global type 'JSX.Element' must exist when using JSX.
tests/cases/conformance/jsx/jsxEsprimaFbTestSuite.tsx(51,1): error TS2602: The global type 'JSX.Element' must exist when using JSX.
tests/cases/conformance/jsx/jsxEsprimaFbTestSuite.tsx(53,1): error TS2602: The global type 'JSX.Element' must exist when using JSX.


==== tests/cases/conformance/jsx/jsxEsprimaFbTestSuite.tsx (24 errors) ====
    declare var React: any;
    declare var 日本語;
    declare var AbC_def;
    declare var LeftRight;
    declare var x;
    declare var a;
    declare var props;
    
    <a />;
    ~~~~~
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
    
    //<n:a n:v />; Namespace unsuported
    
    //<a n:foo="bar"> {value} <b><c /></b></a>;  Namespace unsuported
    
    <a b={" "} c=" " d="&amp;" e="id=1&group=2" f="&#123456789" g="&#123*;" h="&#x;" />;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
    
    <a b="&notanentity;" />;
    ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
    <a
    ~~
    />;
    ~~
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
    
    <日本語></日本語>;
    ~~~~~
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
    
    <AbC_def
    ~~~~~~~~
      test="&#x0026;&#38;">
    ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
    bar
    baz
    </AbC_def>;
    
    <a b={x ? <c /> : <d />} />;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
              ~~~~~
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
                      ~~~~~
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
    
    <a>{}</a>;
    ~~~
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
    
    <a>{/* this is a comment */}</a>;
    ~~~
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
    
    <div>@test content</div>;
    ~~~~~
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
    
    <div><br />7x invalid-js-identifier</div>;
    ~~~~~
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
         ~~~~~~
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
    
    <LeftRight left=<a /> right=<b>monkeys /> gorillas</b> />;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
                    ~~~~~
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
                                ~~~
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
    
    <a.b></a.b>;
    ~~~~~
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
    
    <a.b.c></a.b.c>;
    ~~~~~~~
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
    
    (<div />) < x;
     ~~~~~~~
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
    
    <div {...props} />;
    ~~~~~~~~~~~~~~~~~~
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
    
    <div {...props} post="attribute" />;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
    
    <div pre="leading" pre2="attribute" {...props}></div>;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
    
    <a>    </a>;
    ~~~
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
    